; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_fpu.c_fpu_activate_sw.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_fpu.c_fpu_activate_sw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32, i32 }

@TDP_KTHREAD = common dso_local global i32 0, align 4
@fpcurthread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fpu_activate_sw(%struct.thread* %0) #0 {
  %2 = alloca %struct.thread*, align 8
  store %struct.thread* %0, %struct.thread** %2, align 8
  %3 = load %struct.thread*, %struct.thread** %2, align 8
  %4 = getelementptr inbounds %struct.thread, %struct.thread* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @TDP_KTHREAD, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load %struct.thread*, %struct.thread** %2, align 8
  %11 = getelementptr inbounds %struct.thread, %struct.thread* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @PCB_USER_FPU(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %9, %1
  %16 = load i32, i32* @fpcurthread, align 4
  %17 = call i32 @PCPU_SET(i32 %16, i32* null)
  %18 = call i32 (...) @start_emulating()
  br label %28

19:                                               ; preds = %9
  %20 = load i32, i32* @fpcurthread, align 4
  %21 = call %struct.thread* @PCPU_GET(i32 %20)
  %22 = load %struct.thread*, %struct.thread** %2, align 8
  %23 = icmp ne %struct.thread* %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load %struct.thread*, %struct.thread** %2, align 8
  %26 = call i32 @restore_fpu_curthread(%struct.thread* %25)
  br label %27

27:                                               ; preds = %24, %19
  br label %28

28:                                               ; preds = %27, %15
  ret void
}

declare dso_local i32 @PCB_USER_FPU(i32) #1

declare dso_local i32 @PCPU_SET(i32, i32*) #1

declare dso_local i32 @start_emulating(...) #1

declare dso_local %struct.thread* @PCPU_GET(i32) #1

declare dso_local i32 @restore_fpu_curthread(%struct.thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
